--- a/todo.org
+++ b/todo.org
@@ -29,6 +29,21 @@ CLOSED: [2015-10-20 二 19:54]
 * 5. misc
 ** TODO check how to use makefile implicit and some techiniques
 
+==23312== Conditional jump or move depends on uninitialised value(s)
+==23312==    at 0x804FA8F: Board::init(int, int, std::vector<std::vector<RowLimit, std::allocator<RowLimit> >, std::allocator<std::vector<RowLimit, std::allocator<RowLimit> > > >, std::vector<std::vector<ColLimit, std::allocator<ColLimit> >, std::allocator<std::vector<ColLimit, std::allocator<ColLimit> > > >, char*, int) (board.h:100)
+==23312==    by 0x80492F2: main (nonogramReader.h:48)
+==23312== 
+
+now(remove printboard, asprintf)
+|       | 15x15 | 25x25 |
+|-------+-------+-------|
+|     1 |       | stuck |
+|     2 |       | stuck |
+| 1~100 |  4.85 |       |
+| 1~200 | 18.26 |       |
+| 1~290 | 73.04 |       |
+|  1000 | 21.17 |       |
+
 commit 9c9165c48
 Wed Oct 21 16:58:14 2015 +0800
 |       |        15x15 | 25x25 |
